...
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg"
        tools:context=".views.AddOrder">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/addOrderRecyclerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/white"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:scrollbars="vertical"
            app:layout_constraintBottom_toTopOf="@id/guidelineMiddle"
            app:layout_constraintEnd_toStartOf="@id/guidelineEnd"
            app:layout_constraintStart_toEndOf="@id/guidelineStart"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/addOrderBtnAddRemoveProducts"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/button_orange"
            android:elevation="15dp"
            android:padding="12dp"
            android:text="ADD/REMOVE PRODUCT"
            android:textAllCaps="true"
            android:textColor="#ffffff"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/addOrderRecyclerView"
            app:layout_constraintStart_toStartOf="@id/addOrderRecyclerView"
            app:layout_constraintTop_toBottomOf="@id/guidelineMiddle" />
        <EditText
            android:id="@+id/addOrderEdtReferenceNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_corners_white"
            android:elevation="15dp"
            android:hint="Reference No."
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="48dp"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="@id/addOrderBtnAddRemoveProducts"
            app:layout_constraintStart_toStartOf="@id/addOrderBtnAddRemoveProducts"
            app:layout_constraintTop_toBottomOf="@id/addOrderBtnAddRemoveProducts" />

        <EditText
            android:id="@+id/addOrderEdtCustomerName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_corners_white"
            android:elevation="15dp"
            android:hint="Customer Name"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="48dp"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="@id/addOrderEdtReferenceNumber"
            app:layout_constraintStart_toStartOf="@id/addOrderEdtReferenceNumber"
            app:layout_constraintTop_toBottomOf="@id/addOrderEdtReferenceNumber" />

        <EditText
            android:id="@+id/addOrderEdtCompanyName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_corners_white"
            android:elevation="15dp"
            android:hint="Company Name"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="48dp"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="@id/addOrderEdtCustomerName"
            app:layout_constraintStart_toStartOf="@id/addOrderEdtCustomerName"
...
