...
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg"
        tools:context=".views.orderDetails">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/orderDetailsRecyclerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/white"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:scrollbars="vertical"
            app:layout_constraintBottom_toTopOf="@id/guidelineMiddle"
            app:layout_constraintEnd_toStartOf="@id/guidelineEnd"
            app:layout_constraintStart_toEndOf="@id/guidelineStart"
            app:layout_constraintTop_toTopOf="parent"/>
        <TextView
            android:id="@+id/orderDetailsEdtReferenceNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_corners_white"
            android:elevation="15dp"
            android:minHeight="48dp"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="@id/orderDetailsRecyclerView"
            app:layout_constraintStart_toStartOf="@id/orderDetailsRecyclerView"
            app:layout_constraintTop_toBottomOf="@id/orderDetailsRecyclerView" />

        <TextView
            android:id="@+id/orderDetailsEdtCustomerName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_corners_white"
            android:elevation="15dp"
            android:minHeight="48dp"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="@id/orderDetailsEdtReferenceNumber"
            app:layout_constraintStart_toStartOf="@id/orderDetailsEdtReferenceNumber"
            app:layout_constraintTop_toBottomOf="@id/orderDetailsEdtReferenceNumber" />

        <TextView
            android:id="@+id/orderDetailsEdtCompanyName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_corners_white"
            android:elevation="15dp"
            android:minHeight="48dp"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="@id/orderDetailsEdtCustomerName"
            app:layout_constraintStart_toStartOf="@id/orderDetailsEdtCustomerName"
            app:layout_constraintTop_toBottomOf="@id/orderDetailsEdtCustomerName" />
        <TextView
            android:id="@+id/orderDetailsEdtFirstAddress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_corners_white"
            android:elevation="15dp"
            android:minHeight="48dp"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="@id/orderDetailsEdtCompanyName"
            app:layout_constraintStart_toStartOf="@id/orderDetailsEdtCompanyName"
            app:layout_constraintTop_toBottomOf="@id/orderDetailsEdtCompanyName" />
        <TextView
            android:id="@+id/orderDetailsEdtSecondAddress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_corners_white"
            android:elevation="15dp"
            android:minHeight="48dp"
...
