<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:foregroundTint="@color/black"
    tools:context=".views.ItemList">

...
        app:layout_constraintBottom_toTopOf="@id/itemListGuidelineTop"
        app:layout_constraintEnd_toEndOf="@id/itemListGuidelineEnd"
        app:layout_constraintStart_toEndOf="@id/itemListGuidelineStart"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/purchaseOrderProductListBtnAddProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_orange"
            android:text="Add Product"
            android:paddingStart="2dp"
            android:paddingEnd="2dp"
            android:textColor="#ffffff"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/purchaseOrderProductListBtnSave"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/purchaseOrderProductListBtnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_navyblue"
            android:text="SAVE"
            android:paddingStart="2dp"
            android:paddingEnd="2dp"
            android:textColor="#ffffff"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
...
